--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -3,10 +3,12 @@ name: Code Quality
 on:
   push:
     branches:
-      - main
+      - master
+      - develop
   pull_request:
     branches:
-      - main
+      - master
+      - develop
 
 jobs:
   lint:
