--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -2,7 +2,8 @@ name: SonarCloud
 on:
   push:
     branches:
-      - main
+      - master
+        - develop
   pull_request:
     types: [opened, synchronize, reopened]
 
