--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,56 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - name: Lint code
-        run: npm run lint
+  lint:
+    runs-on: ubuntu-latest
 
-      - name: Deploy to production
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: |
-          echo "Deploying to production..."
-          # Ajoutez ici les commandes de déploiement spécifiques à votre projet
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run ESLint
+        run: npx eslint './src/**/*.ts'
+
+      - name: Run Prettier Check
+        run: npx prettier --check './src/**/*.ts'
+
+   sonarcloud:
+        runs-on: ubuntu-latest
+        steps:
+          - uses: actions/checkout@v2
+          - name: Set up JDK 11
+            uses: actions/setup-java@v1
+            with:
+              java-version: 11
+          - name: Cache SonarCloud packages
+            uses: actions/cache@v2
+            with:
+              path: ~/.sonar/cache
+              key: ${{ runner.os }}-sonar
+              restore-keys: ${{ runner.os }}-sonar
+          - name: Cache SonarCloud scanner
+            uses: actions/cache@v2
+            with:
+              path: ~/.sonar/scanner
+              key: ${{ runner.os }}-sonar-scanner
+              restore-keys: ${{ runner.os }}-sonar-scanner
+          - name: Install SonarCloud scanner
+            run: |
+              npm install -g sonarqube-scanner
+          - name: SonarCloud Scan
+            env:
+              SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            run: |
+              sonar-scanner \
+              -Dsonar.organization=beerhubynov \
+              -Dsonar.projectKey=BeerHubYnov_beerhub-nest \
+              -Dsonar.sources=.    
+
