--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/swagger": "^8.1.1",
+    "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^6.2.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
