--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,40 +54,40 @@ jobs:
       - name: Run Prettier Check
         run: npx prettier --check './src/**/*.ts'
 
-  # sonarcloud:
-  #   runs-on: ubuntu-latest
-  #   needs: build
+  sonarcloud:
+    runs-on: ubuntu-latest
+    needs: build
 
-  #   steps:
-  #     - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v2
 
-  #     - name: Set up JDK 11
-  #       uses: actions/setup-java@v1
-  #       with:
-  #         java-version: 11
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
 
-  #     - name: Cache SonarCloud packages
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: ~/.sonar/cache
-  #         key: ${{ runner.os }}-sonar
-  #         restore-keys: ${{ runner.os }}-sonar
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
 
-  #     - name: Cache SonarCloud scanner
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: ~/.sonar/scanner
-  #         key: ${{ runner.os }}-sonar-scanner
-  #         restore-keys: ${{ runner.os }}-sonar-scanner
+      - name: Cache SonarCloud scanner
+        uses: actions/cache@v2
+        with:
+          path: ~/.sonar/scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
 
-  #     - name: Install SonarCloud scanner
-  #       run: npm install -g sonarqube-scanner
+      - name: Install SonarCloud scanner
+        run: npm install -g sonarqube-scanner
 
-  #     - name: SonarCloud Scan
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #       run: |
-  #         sonar-scanner \
-  #         -Dsonar.organization=beerhubynov \
-  #         -Dsonar.projectKey=BeerHubYnov_beerhub-nest \
-  #         -Dsonar.sources=.
+      - name: SonarCloud Scan
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          sonar-scanner \
+          -Dsonar.organization=beerhubynov \
+          -Dsonar.projectKey=BeerHubYnov_beerhub-nest \
+          -Dsonar.sources=.
