--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - master
-      - develop
+      - develop-ci
   pull_request:
     branches:
       - master
-      - develop
+      - develop-ci
 
 jobs:
   build:
@@ -28,6 +28,22 @@ jobs:
 
       - name: Build project
         run: npm run build
+  
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Run tests
         run: npm test
