--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,6 +107,7 @@ jobs:
           -Dsonar.organization=beerhubynov \
           -Dsonar.projectKey=BeerHubYnov_beerhub-nest \
           -Dsonar.sources=. \
+          -Dsonar.tests=src
           -Dsonar.test.inclusions=src/**/*.spec.ts
           -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
