--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,7 +108,7 @@ jobs:
           -Dsonar.projectKey=BeerHubYnov_beerhub-nest \
           -Dsonar.sources=. \
           -Dsonar.tests=src
-          -Dsonar.test.inclusions=src/**/*.spec.ts
+          -Dsonar.test.inclusions=/**/*.spec.ts \
           -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 
