--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,11 +104,11 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           sonar-scanner \
-          -Dsonar.organization=beerhubynov \
-          -Dsonar.projectKey=BeerHubYnov_beerhub-nest \
-          -Dsonar.sources=. \
-          -Dsonar.tests=src
-          -Dsonar.test.inclusions=/**/*.spec.ts \
-          -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.organization=beerhubynov \
+            -Dsonar.projectKey=BeerHubYnov_beerhub-nest \
+            -Dsonar.sources=. \
+            -Dsonar.tests=src \
+            -Dsonar.test.inclusions=src/**/*.spec.ts \
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 
