--- a/sonar.properties
+++ b/sonar.properties
@@ -3,10 +3,10 @@ sonar.sources=src
 sonar.language=ts
 sonar.sourceEncoding=UTF-8
 
-sonar.tests=tests
-sonar.test.inclusions=tests//*.spec.ts, tests//*.test.ts
+sonar.tests=src
+sonar.test.inclusions=src/**/*.spec.ts,src/**/*.test.ts
 
-sonar.exclusions=node_modules/, dist/, coverage/**
+sonar.exclusions=node_modules/**,dist/**,coverage/**
 
 sonar.typescript.tsconfigPath=tsconfig.json
 sonar.testExecutionReportPaths=playwright-report/results.json
