--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,6 +99,9 @@ jobs:
       - name: Install SonarCloud scanner
         run: npm install -g sonarqube-scanner
 
+      - name: Run .NET tests and generate .trx report
+        run: dotnet test --logger "trx;LogFileName=report.trx"
+
       - name: SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -109,6 +112,7 @@ jobs:
             -Dsonar.sources=. \
             -Dsonar.tests=src \
             -Dsonar.test.inclusions=src/**/*.spec.ts \
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
+            -Dsonar.cs.vstest.reportsPaths=report.trx
 
 
