test fix sonarqube

--- a/sonar.properties
+++ b/sonar.properties
@@ -4,7 +4,7 @@ sonar.language=ts
 sonar.sourceEncoding=UTF-8
 
 sonar.tests=src
-sonar.test.inclusions=src/**/*.spec.ts,src/**/*.test.ts
+sonar.test.inclusions=src/**/*.spec.ts,src/**/*.test.ts, tests/**/*.spec.ts, tests/**/*
 
 sonar.exclusions=node_modules/**,dist/**,coverage/**
 
