--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,6 +111,6 @@ jobs:
             -Dsonar.projectKey=BeerHubYnov_beerhub-nest \
             -Dsonar.sources=. \
             -Dsonar.tests=src \
-            -Dsonar.test.inclusions=src/**/*.spec.ts \
+            -Dsonar.test.inclusions=src/**/*.spec.ts,src/**/*.test.ts, tests/**/*.spec.ts, tests/**/* \
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
 
