--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,15 +16,18 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build project
         run: npm run build
@@ -40,13 +43,21 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Run tests
-        run: npm test
+      - name: Run tests with coverage
+        run: npm run test:cov
+
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-reports
+          path: coverage/
+          retention-days: 1
 
   lint:
     runs-on: ubuntu-latest
@@ -59,10 +70,11 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run ESLint
         run: npx eslint './src/**/*.ts'
@@ -72,42 +84,20 @@ jobs:
 
   sonarcloud:
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
         with:
-          java-version: 11
+          fetch-depth: 0
 
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v2
+      - name: Download coverage reports
+        uses: actions/download-artifact@v3
         with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
-      - name: Cache SonarCloud scanner
-        uses: actions/cache@v2
-        with:
-          path: ~/.sonar/scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
-
-      - name: Install SonarCloud scanner
-        run: npm install -g sonarqube-scanner
+          name: coverage-reports
+          path: coverage/
 
       - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          sonar-scanner \
-            -Dsonar.organization=beerhubynov \
-            -Dsonar.projectKey=BeerHubYnov_beerhub-nest \
-            -Dsonar.sources=. \
-            -Dsonar.tests=src \
-            -Dsonar.test.inclusions=src/**/*.spec.ts,src/**/*.test.ts, tests/**/*.spec.ts, tests/**/* \
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
-
