--- a/sonar.properties
+++ b/sonar.properties
@@ -1,14 +1,10 @@
-sonar.projectVersion=1.0
+sonar.organization=beerhubynov
+sonar.projectKey=BeerHubYnov_beerhub-nest
+
 sonar.sources=src
-sonar.language=ts
-sonar.sourceEncoding=UTF-8
-
 sonar.tests=src
-sonar.test.inclusions=src/**/*.spec.ts,src/**/*.test.ts, tests/**/*.spec.ts, tests/**/*
-
-sonar.exclusions=node_modules/**,dist/**,coverage/**
-
-sonar.typescript.tsconfigPath=tsconfig.json
-sonar.testExecutionReportPaths=playwright-report/results.json
-
+sonar.test.inclusions=src/**/*.spec.ts,src/**/*.test.ts,tests/**/*.spec.ts,tests/**/*
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.tsconfigPath=tsconfig.json
+
+sonar.sourceEncoding=UTF-8
